--- a/exp4.html
+++ b/exp4.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-  <h2>Hotel Room Booking Form</h2>
+  <h2 align="center">Hotel Room Booking Form</h2>
 
-  <form action="#" method="post">
+  <form action="#" method="post" align="center">
     
     <label for="name">Full Name:</label>
     <input type="text" id="name" name="fullname" required><br><br>
