--- a/exp1.html
+++ b/exp1.html
@@ -4,7 +4,7 @@
         <title>Aadhya</title>
         <body>
             <h1>Introduction</h1>
-            <h5>Welcome to the <b>Course Curriclum</b> this pafe demonstrates the use of <i>HTML formatting,</i><u>LISTS,</u> and specials characters such as &trade;, &copy; etc</h5>
+            <h5>Welcome to the <b>Course Curriclum</b> this page demonstrates the use of <i>HTML formatting,</i><u>LISTS,</u> and specials characters such as &trade;, &copy; etc</h5>
             <h2>Semester 1 Subjects(ordered list)</h2>
             <ol>
                 <li>Mathematics I</li>
