--- a/exp2.html
+++ b/exp2.html
@@ -31,7 +31,10 @@
             <hr>
             <h3>news update</h3>
             <h4>listen to today's top haedlines</h4>
-            <audio src="music1.mp3"></audio>
+            <audio controls>
+            <source src="music1.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
             <hr>
             <h3>contact us</h3>
             <h6>email: info@globalnews.com</h6>
