--- a/exp3.html
+++ b/exp3.html
@@ -11,13 +11,13 @@
       background-color: #ffffff;
     }
     table {
-      border: 6px double #000; /* Thick outer border */
+      border: 6px double #000; 
       border-collapse: collapse;
       width: 90%;
       margin: auto;
     }
     th, td {
-      border: 2px double #000; /* Inner borders */
+      border: 2px double #000;
       padding: 10px;
       text-align: center;
     }
